--- a/style.css
+++ b/style.css
@@ -71,14 +71,14 @@ body{
     margin-right: 20px;
 }
 .bgimg{
-    background-image: url(/images/shapes/shape-1.png);
+    background-image: url(images/shapes/shape-1.png);
     background-position: left center;
     background-repeat: no-repeat;
     background-size: 50%;
     margin-left: 0;
 }
 .bgimg2{
-    background-image: url(/images/shapes/shape-1.png);
+    background-image: url(images/shapes/shape-1.png);
     background-position: right bottom;
     background-repeat: no-repeat;
     background-size: 50%;
